--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soy torres Stock</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Soy torres stock</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,89 +18,71 @@
     />
 
     <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar bg-tertiary">
-        <div class="container d-flex justify-content-center">
-          <a class="navbar-brand" href="#">
-            <h2 class="h2">SoyTorress Stock</h2>
-          </a>
+      <div class="container d-flex justify-content-center">
+        <a class="navbar-brand" href="#logIn">
+          <h2 class="h2">SoyTorress Stock</h2>
+        </a>
+      </div>
+    </nav>
+
+    <main class="d-flex flex-column justify-content-center align-items-center">
+      <div class="container mt-5">
+        <p class="text-white text-center h1">Bienvenida</p>
+        <p class="text-white text-center h5 mt-3">
+          Con esta aplicación podrás llevar un registro de entradas y salidas de
+          tus productos
+        </p>
+      </div>
+
+      <form
+        class="container log-in-form rounded my-auto pt-3 align-items-center"
+        id="logIn"
+      >
+        <div class="d-flex flex-column mx-auto">
+          <label for="Username" class="text-dark h5">Nombre de usuario</label>
+          <input
+            type="text"
+            name="Username"
+            placeholder="Username"
+            class="inputLogin"
+            id="inputName"
+          />
+          <span class="userError text-danger invisible">Incorrect User</span>
+          <span class="correctUser text-success invisible">Correct User</span>
         </div>
-      </nav>
-      
-      <main>
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Libretas o agendas
-                      </button>
-                    </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                      <div class="accordion-body">
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                              <h5 class="card-title">Producto</h5>
-                              <h6 class="card-subtitle mb-2 text-body-secondary">200 unidades</h6>
-                              <p class="card-text">Costo de produccion: 50000</p>
-                              <p class="card-text">precion de venta: 9000</p>
-                              <a href="#" class="card-link">Eliminar</a>
-                              <a href="#" class="card-link">editar</a>
-                            </div>
-                          </div>
-                          <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                              <h5 class="card-title">Producto</h5>
-                              <h6 class="card-subtitle mb-2 text-body-secondary">200 unidades</h6>
-                              <p class="card-text">Costo de produccion: 50000</p>
-                              <p class="card-text">precion de venta: 9000</p>
-                              <a href="#" class="card-link">Eliminar</a>
-                              <a href="#" class="card-link">editar</a>
-                            </div>
-                          </div>
-                          <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                              <h5 class="card-title">Producto</h5>
-                              <h6 class="card-subtitle mb-2 text-body-secondary">200 unidades</h6>
-                              <p class="card-text">Costo de produccion: 50000</p>
-                              <p class="card-text">precion de venta: 9000</p>
-                              <a href="#" class="card-link">Eliminar</a>
-                              <a href="#" class="card-link">editar</a>
-                            </div>
-                          </div>
-                          <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                              <h5 class="card-title">Producto</h5>
-                              <h6 class="card-subtitle mb-2 text-body-secondary">200 unidades</h6>
-                              <p class="card-text">Costo de produccion: 50000</p>
-                              <p class="card-text">precion de venta: 9000</p>
-                              <a href="#" class="card-link">Eliminar</a>
-                              <a href="#" class="card-link">editar</a>
-                            </div>
-                          </div>
-                          <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                              <h5 class="card-title">Producto</h5>
-                              <h6 class="card-subtitle mb-2 text-body-secondary">200 unidades</h6>
-                              <p class="card-text">Costo de produccion: 50000</p>
-                              <p class="card-text">precion de venta: 9000</p>
-                              <a href="#" class="card-link">Eliminar</a>
-                              <a href="#" class="card-link">editar</a>
-                            </div>
-                          </div>
-                      </div>
-                    </div>
-                  </div>
-            </div>
-          </div>
-      </main>
 
-<script
-src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-crossorigin="anonymous"
-></script>
-</body>
+        <div class="d-flex flex-column mt-3 mt-md-5 mx-auto">
+          <label for="password " class="text-dark h5">Contraseña</label>
+          <input
+            type="password"
+            name="password"
+            placeholder="password"
+            aria-label="password"
+            aria-describedby="addon-wrapping"
+            class="inputLogin"
+            id="inputPassword"
+          />
+          <span class="correctPsW text-success invisible"
+            >Correct PASSWORD</span
+          >
+          <span class="error text-danger invisible">WRONG PASSWORD</span>
+        </div>
 
+        <div class="mt-5 d-flex justify-content-center">
+          <input type="submit" class="btn btn-primary" />
+        </div>
+      </form>
+    </main>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="/enterpriseStock/js/login.js"></script>
+  </body>
 </html>
