--- a/stock.html
+++ b/stock.html
@@ -63,12 +63,12 @@
                   <input type="number" name="cost">
                 </div>
   
-                <div class="inputGroup  col-12 col-sm-6">
+                <div class="inputGroup  col-12 col-sm-6 d-flex flex-column">
                   <label for="sale">precio de venta</label>
                   <input type="number" name="sale">
                 </div>
   
-                <div class="inputGroup col-6 mx-auto">
+                <div class="inputGroup col-6">
                   <label for="units">unidades</label>
                   <input type="number" name="units">
                 </div>
@@ -78,6 +78,8 @@
                   <select name="" id="">
                     <option value="1">Libros o agendas</option>
                   </select>
+
+                  <div class="d-flex justify-content-center mt-3"> <input type="submit" class="btn btn-primary"></div>
                   
                 </div>
               </form>
@@ -105,8 +107,8 @@
               class="accordion-collapse collapse show"
               data-bs-parent="#accordionExample"
             >
-              <div class="accordion-body">
-                <div class="card" style="width: 18rem">
+              <div class="accordion-body row justify-content-center ">
+                <div class="card col-12 col-sm-6 col-md-4 my-2 mx-md-3" style="width: 13rem">
                   <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <h6 class="card-subtitle mb-2 text-body-secondary">
@@ -118,7 +120,8 @@
                     <a href="#" class="card-link">editar</a>
                   </div>
                 </div>
-                <div class="card" style="width: 18rem">
+
+                <div class="card col-12 col-sm-6 col-md-4 my-2 mx-md-3" style="width: 13rem">
                   <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <h6 class="card-subtitle mb-2 text-body-secondary">
@@ -130,7 +133,8 @@
                     <a href="#" class="card-link">editar</a>
                   </div>
                 </div>
-                <div class="card" style="width: 18rem">
+
+                <div class="card col-12 col-sm-6 col-md-4 my-2 mx-md-3" style="width: 13rem">
                   <div class="card-body">
                     <h5 class="card-title">Producto</h5>
                     <h6 class="card-subtitle mb-2 text-body-secondary">
@@ -142,30 +146,7 @@
                     <a href="#" class="card-link">editar</a>
                   </div>
                 </div>
-                <div class="card" style="width: 18rem">
-                  <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">
-                      200 unidades
-                    </h6>
-                    <p class="card-text">Costo de produccion: 50000</p>
-                    <p class="card-text">precion de venta: 9000</p>
-                    <a href="#" class="card-link">Eliminar</a>
-                    <a href="#" class="card-link">editar</a>
-                  </div>
-                </div>
-                <div class="card" style="width: 18rem">
-                  <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">
-                      200 unidades
-                    </h6>
-                    <p class="card-text">Costo de produccion: 50000</p>
-                    <p class="card-text">precion de venta: 9000</p>
-                    <a href="#" class="card-link">Eliminar</a>
-                    <a href="#" class="card-link">editar</a>
-                  </div>
-                </div>
+
               </div>
             </div>
           </div>
