adding some basic methods to manipulate the cards

--- a/stock.html
+++ b/stock.html
@@ -37,11 +37,11 @@
         <button class="btn btn-primary">Agregar venta</button>
       </div>
     </nav>
-  
+
     <main>
       <div class="modal" id="addProduct">
         <div class="modal-dialog modal-md">
-          <div class="modal-content ">
+          <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">Añade tu producto aquí</h5>
               <button
@@ -52,112 +52,142 @@
               ></button>
             </div>
             <div class="modal-body d-flex justify-content-center">
-              <form id="añadirProducto " class="row w-100 gy-4 justify-content-center align-items-center">
+              <form
+                id="addProduct"
+                class="row w-100 gy-4 justify-content-center align-items-center"
+              >
                 <div class="inputGroup col-12">
                   <label for="productName">Nombre del producto</label>
-                  <input type="text" name="productName">
+                  <input type="text" name="productName" class="name" />
                 </div>
-  
+
                 <div class="inputGroup col-12 col-sm-6 d-flex flex-column">
                   <label for="cost">costo de producción</label>
-                  <input type="number" name="cost">
+                  <input type="number" name="cost" class="cost" />
                 </div>
-  
-                <div class="inputGroup  col-12 col-sm-6 d-flex flex-column">
+
+                <div class="inputGroup col-12 col-sm-6 d-flex flex-column">
                   <label for="sale">precio de venta</label>
-                  <input type="number" name="sale">
+                  <input type="number" name="sale" class="sale" />
                 </div>
-  
+
                 <div class="inputGroup col-6">
                   <label for="units">unidades</label>
-                  <input type="number" name="units">
+                  <input type="number" name="units" class="units" />
                 </div>
-  
+
                 <div class="inputGroup col-12 d-flex flex-column">
                   <label for="cost">categoria</label>
-                  <select name="" id="">
+                  <select name="category" class="category">
                     <option value="1">Libros o agendas</option>
+                    <option value="2">Accesorios y belleza</option>
+                    <option value="3">Oficina, escritorio, morrales</option>
                   </select>
 
-                  <div class="d-flex justify-content-center mt-3"> <input type="submit" class="btn btn-primary"></div>
-                  
+                  <div class="d-flex justify-content-center mt-3">
+                    <input type="submit" class="btn btn-primary" />
+                  </div>
                 </div>
               </form>
             </div>
           </div>
         </div>
       </div>
-      <div class="accordion" id="accordionExample">
+      <div class="accordion mt-5" id="accordionExample">
         <div class="accordion-item">
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button
-                class="accordion-button"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseOne"
-                aria-expanded="true"
-                aria-controls="collapseOne"
-              >
-                Libretas o agendas
-              </button>
-            </h2>
-            <div
-              id="collapseOne"
-              class="accordion-collapse collapse show"
-              data-bs-parent="#accordionExample"
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseOne"
+              aria-expanded="true"
+              aria-controls="collapseOne"
             >
-              <div class="accordion-body row justify-content-center ">
-                <div class="card col-12 col-sm-6 col-md-4 my-2 mx-md-3" style="width: 13rem">
-                  <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">
-                      200 unidades
-                    </h6>
-                    <p class="card-text">Costo de produccion: 50000</p>
-                    <p class="card-text">precion de venta: 9000</p>
-                    <a href="#" class="card-link">Eliminar</a>
-                    <a href="#" class="card-link">editar</a>
-                  </div>
-                </div>
+              Libretas o agendas
+            </button>
+          </h2>
+          <div
+            id="collapseOne"
+            class="accordion-collapse collapse show"
+            data-bs-parent="#accordionExample"
+          >
+            <div
+              class="accordion-body row justify-content-center notebook"
+            ></div>
+          </div>
+        </div>
 
-                <div class="card col-12 col-sm-6 col-md-4 my-2 mx-md-3" style="width: 13rem">
-                  <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">
-                      200 unidades
-                    </h6>
-                    <p class="card-text">Costo de produccion: 50000</p>
-                    <p class="card-text">precion de venta: 9000</p>
-                    <a href="#" class="card-link">Eliminar</a>
-                    <a href="#" class="card-link">editar</a>
-                  </div>
-                </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo"
+              aria-expanded="true"
+              aria-controls="collapseOne"
+            >
+              Accesorios
+            </button>
+          </h2>
+          <div
+            id="collapseTwo"
+            class="accordion-collapse collapse show"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body accesories"></div>
+          </div>
+        </div>
 
-                <div class="card col-12 col-sm-6 col-md-4 my-2 mx-md-3" style="width: 13rem">
-                  <div class="card-body">
-                    <h5 class="card-title">Producto</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">
-                      200 unidades
-                    </h6>
-                    <p class="card-text">Costo de produccion: 50000</p>
-                    <p class="card-text">precion de venta: 9000</p>
-                    <a href="#" class="card-link">Eliminar</a>
-                    <a href="#" class="card-link">editar</a>
-                  </div>
-                </div>
-
-              </div>
-            </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseThree"
+              aria-expanded="true"
+              aria-controls="collapseOne"
+            >
+              Oficina, escritorio, morrales
+            </button>
+          </h2>
+          <div
+            id="collapseThree"
+            class="accordion-collapse collapse show"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body office"></div>
           </div>
         </div>
       </div>
     </main>
+
+    <template id="productTemplate">
+      <div
+        class="card col-12 col-sm-6 col-md-4 my-2 mx-md-3"
+        
+      >
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <h6 class="card-subtitle units mb-2 text-body-secondary">
+            Unidades disponibles
+          </h6>
+          <p class="card-subtitle cost">Costo de producción:</p>
+          <p class="card-text price">precio de venta:</p>
+          <button  class="btn btn-danger deleteBtn">Eliminar</button>
+          <button  class="btn btn-primary editBtn">editar</button>
+        </div>
+      </div>
+    </template>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+
+    <script src="/enterpriseStock/js/app.js"></script>
   </body>
 </html>
