first version of the stock manager

--- a/stock.html
+++ b/stock.html
@@ -162,13 +162,16 @@
           </div>
         </div>
       </div>
+      
+      <section class="Months">
+        <header class="container"> <p class="h4">Ventas mensuales</p></header>
+      </section>
     </main>
 
+
+
     <template id="productTemplate">
-      <div
-        class="card col-12 col-sm-6 col-md-4 my-2 mx-md-3"
-        
-      >
+      <div class="card col-12 col-sm-6 col-md-4 my-2 mx-md-3">
         <div class="card-body">
           <h5 class="card-title"></h5>
           <h6 class="card-subtitle units mb-2 text-body-secondary">
