--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             id="inputPassword"
           />
           <span class="correctPsW text-success invisible"
-            >Correct PASSWORD</span
+            >Correct password</span
           >
           <span class="error text-danger invisible">WRONG PASSWORD</span>
         </div>
